addUsuario, getTrabajos, insertUsuario, insertTrabajo

--- a/src/app/admin/usuario/usuario.component.html
+++ b/src/app/admin/usuario/usuario.component.html
@@ -1,297 +1,207 @@
 <!-- usuarioVer -->
 <div *ngIf="opcionUsuario === 'usuarioVer'">
-  <div class="input-group mb-3">
-    <!-- [(ngModel)]="terminoBusqueda" -->
-    <input
-      type="text"
-      class="form-control"
-      #buscarTexto
-      placeholder="Introduce nombre a buscar"
-      aria-label="Recipient's username"
-      aria-describedby="button-addon2"
-    />
-    <div class="input-group-append">
-      <button
-        class="btn btn-outline-secondary"
-        type="button"
-        id="button-addon2"
-        (click)="getUsuarioPorNombre(buscarTexto.value)"
-      >
+    <div class="input-group mb-3">
+        <!-- [(ngModel)]="terminoBusqueda" -->
+        <input type="text" class="form-control" #buscarTexto placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2" />
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getUsuarioPorNombre(buscarTexto.value)">
         Buscar
       </button>
+        </div>
     </div>
-  </div>
-  <div
-    *ngFor="let item of usuariosFiltrados"
-    class="card text-white bg-secondary mb-3"
-  >
-    <div class="card-header">{{ item.nombre }}</div>
-    <div class="card-body">
-      <h5 class="card-title">Secondary card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-      <button class="btn btn-primary" (click)="cargarDatosUsuario(item)">
+    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3">
+        <div class="card-header">{{ item.nombre }}</div>
+        <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+            <button class="btn btn-primary" (click)="cargarDatosUsuario(item)">
         Ver más...
       </button>
+        </div>
     </div>
-  </div>
-  <div *ngIf="usuarioSeleccionado" class="card bg-light mb-3">
-    <div class="card-header">
-      <span class="badge badge-pill badge-primary">
+    <div *ngIf="usuarioSeleccionado" class="card bg-light mb-3">
+        <div class="card-header">
+            <span class="badge badge-pill badge-primary">
         {{ usuarioSeleccionado.id }}
-      </span>
-      {{ usuarioSeleccionado.nombre }} {{ usuarioSeleccionado.apellidos }}
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">{{ usuarioSeleccionado.email }}</h5>
-      <p>Nombre: {{ usuarioSeleccionado.nombre }}</p>
-      <p>Apellidos: {{ usuarioSeleccionado.apellidos }}</p>
-      <p>Contraseña: {{ usuarioSeleccionado.contrasena }}</p>
-      <p>Rol: {{ usuarioSeleccionado.rol }}</p>
-      <!--
+      </span> {{ usuarioSeleccionado.nombre }} {{ usuarioSeleccionado.apellidos }}
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">{{ usuarioSeleccionado.email }}</h5>
+            <p>Nombre: {{ usuarioSeleccionado.nombre }}</p>
+            <p>Apellidos: {{ usuarioSeleccionado.apellidos }}</p>
+            <p>Contraseña: {{ usuarioSeleccionado.contrasena }}</p>
+            <p>Rol: {{ usuarioSeleccionado.rol }}</p>
+            <!--
         <button class="btn btn-primary" (click)="getUsuarioPorNombre(item.nombre)">Ver más...</button>
       -->
+        </div>
     </div>
-  </div>
 </div>
 <!-- usuarioAnadir -->
 <div *ngIf="opcionUsuario === 'usuarioAnadir'">
-  <form>
-    <div class="form-group">
-      <label for="exampleInputNombre">Nombre</label>
-      <input
-        #nombreUsuario
-        type="email"
-        class="form-control"
-        id="exampleInputNombre"
-        aria-describedby="NombreHelp"
-        placeholder="Nombre"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputApellidos">Apellidos</label>
-      <input
-        #apellidosUsuario
-        type="text"
-        class="form-control"
-        id="exampleInputApellidos"
-        aria-describedby="ApellidosHelp"
-        placeholder="Apellidos"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputApellidos">Email</label>
-      <input
-        #emailUsuario
-        type="email"
-        class="form-control"
-        id="exampleInputEmail"
-        aria-describedby="ApellidosHelp"
-        placeholder="Email"
-        required
-      />
-    </div>
-    <div class="form-group">
-      <label for="exampleInputEmail">Contraseña</label>
-      <input
-        #contrasenaUsuario
-        type="password"
-        class="form-control"
-        id="exampleInputContrasena"
-        placeholder="Contraseña"
-        required
-      />
-    </div>
-    <button
-      type="button"
-      class="btn btn-block  btn-info"
-      (click)="
+    <form>
+        <div class="form-group">
+            <label for="exampleInputNombre">Nombre</label>
+            <input #nombreUsuario type="email" class="form-control" id="exampleInputNombre" aria-describedby="NombreHelp" placeholder="Nombre" required />
+        </div>
+        <div class="form-group">
+            <label for="exampleInputApellidos">Apellidos</label>
+            <input #apellidosUsuario type="text" class="form-control" id="exampleInputApellidos" aria-describedby="ApellidosHelp" placeholder="Apellidos" required />
+        </div>
+        <div class="form-group">
+            <label for="exampleInputApellidos">Email</label>
+            <input #emailUsuario type="email" class="form-control" id="exampleInputEmail" aria-describedby="ApellidosHelp" placeholder="Email" required />
+        </div>
+        <div class="form-group">
+            <label for="exampleInputEmail">Contraseña</label>
+            <input #contrasenaUsuario type="password" class="form-control" id="exampleInputContrasena" placeholder="Contraseña" required />
+        </div>
+        <button type="button" class="btn btn-block  btn-info" (click)="
         anadirUsuario(
           nombreUsuario.value,
           apellidosUsuario.value,
           emailUsuario.value,
           contrasenaUsuario.value
         )
-      "
-    >
+      ">
       Añadir usuario
     </button>
-  </form>
+    </form>
 </div>
 
 <!-- usuarioAnadirTrabajo -->
 <div *ngIf="opcionUsuario == 'usuarioAnadirTrabajo'">
-  <div class="input-group mb-3">
-    <input
-      type="text"
-      class="form-control"
-      #buscarTextoAnadirTrabajoUsuario
-      placeholder="Introduce nombre de usuario"
-      aria-label="Recipient's username"
-      aria-describedby="button-addon2"
-    />
-    <div class="input-group-append">
-      <button
-        class="btn btn-outline-secondary"
-        type="button"
-        id="button-addon2"
-        (click)="getUsuarioPorNombre(buscarTextoAnadirTrabajoUsuario.value)"
-      >
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" #buscarTextoAnadirTrabajoUsuario placeholder="Introduce nombre de usuario" aria-label="Recipient's username" aria-describedby="button-addon2" />
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getUsuarioPorNombre(buscarTextoAnadirTrabajoUsuario.value)">
         Buscar
       </button>
+        </div>
     </div>
-  </div>
-  <div
-    *ngFor="let item of usuariosFiltrados"
-    class="card text-white bg-secondary mb-3"
-  >
-    <div class="card-header">{{ item.nombre }}</div>
-    <div class="card-body">
-      <h5 class="card-title">Secondary card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-      <button class="btn btn-primary" (click)="cargarDatosUsuario(item)">
+
+    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3">
+        <div class="card-header">{{ item.nombre }}</div>
+        <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content.
+            </p>
+            <button class="btn btn-primary" (click)="cargarDatosUsuario(item); getTrabajos()">
         Añadir trabajo a usuario
       </button>
+        </div>
     </div>
-  </div>
-  </div>
+
+
+    <div *ngIf="usuarioSeleccionado">
+        <div *ngIf="usuarioSeleccionado" class="card bg-light mb-3">
+            <div class="card-header">
+                <span class="badge badge-pill badge-primary">
+        {{ usuarioSeleccionado.id }}
+      </span> {{ usuarioSeleccionado.nombre }} {{ usuarioSeleccionado.apellidos }}
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{ usuarioSeleccionado.email }}</h5>
+                <p>Nombre: {{ usuarioSeleccionado.nombre }}</p>
+                <p>Apellidos: {{ usuarioSeleccionado.apellidos }}</p>
+                <p>Contraseña: {{ usuarioSeleccionado.contrasena }}</p>
+                <p>Rol: {{ usuarioSeleccionado.rol }}</p>
+                <!--
+        <button class="btn btn-primary" (click)="getUsuarioPorNombre(item.nombre)">Ver más...</button>
+      -->
+            </div>
+        </div>
+    </div>
+
+    <div id="accordion">
+        <div class="card" *ngFor="let item of trabajos">
+            <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Collapsible Group Item #1
+                </button>
+                </h5>
+            </div>
+
+            <div id="collapseOne" class="collapse" aria-labelledby=" headingOne " data-parent="#accordion ">
+                <div class="card-body ">
+                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
+                    on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table,
+                    raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
 
 <!-- usuarioModificar -->
-<div *ngIf="opcionUsuario == 'usuarioModificar'">
-  <div class="input-group mb-3">
-    <input
-      type="text"
-      class="form-control"
-      #buscarTextoModificarUsuario
-      placeholder="Introduce nombre a buscar"
-      aria-label="Recipient's username"
-      aria-describedby="button-addon2"
-    />
-    <div class="input-group-append">
-      <button
-        class="btn btn-outline-secondary"
-        type="button"
-        id="button-addon2"
-        (click)="getUsuarioPorNombre(buscarTextoModificarUsuario.value)"
-      >
+<div *ngIf="opcionUsuario=='usuarioModificar' ">
+    <div class="input-group mb-3 ">
+        <input type="text " class="form-control " #buscarTextoModificarUsuario placeholder="Introduce nombre a buscar " aria-label="Recipient 's username" aria-describedby="button-addon2" />
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getUsuarioPorNombre(buscarTextoModificarUsuario.value)">
         Buscar
       </button>
+        </div>
     </div>
-  </div>
-  <div
-    *ngFor="let item of usuariosFiltrados"
-    class="card text-white bg-secondary mb-3"
-    style="max-width: 18rem;"
-  >
-    <div class="card-header">{{ item.nombre }}</div>
-    <div class="card-body">
-      <h5 class="card-title">Secondary card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
-      <button
-        class="btn btn-info"
-        type="button"
-        id="button-addon2"
-        (click)="cargarDatosUsuario(item)"
-      >
+    <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+        <div class="card-header">{{ item.nombre }}</div>
+        <div class="card-body">
+            <h5 class="card-title">Secondary card title</h5>
+            <p class="card-text">
+                Some quick example text to build on the card title and make up the bulk of the card's content. </p>
+            <button class="btn btn-info" type="button" id="button-addon2" (click)="cargarDatosUsuario(item)">
         Editar usuario
       </button>
+        </div>
     </div>
-  </div>
-  <div *ngIf="usuarioSeleccionado">
-    <form>
-      <div class="form-group">
-        <label for="exampleInputNombre">Nombre</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputNombre"
-          aria-describedby="ApellidosHelp"
-          placeholder="Nombre"
-          [value]="usuarioSeleccionado.nombre"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputApellidos">Apellidos</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputApellidos"
-          aria-describedby="ApellidosHelp"
-          placeholder="Apellidos"
-          [value]="usuarioSeleccionado.apellidos"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputEmail">Email</label>
-        <input
-          type="email"
-          class="form-control"
-          id="exampleInputEmail"
-          placeholder="Email"
-          [value]="usuarioSeleccionado.email"
-        />
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPass">Contraseña</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleInputPass"
-          placeholder="Contraseña"
-          [value]="usuarioSeleccionado.contrasena"
-        />
-      </div>
-      <button class="btn btn-info">Guardar cambios</button>
-    </form>
-  </div>
+    <div *ngIf="usuarioSeleccionado">
+        <form>
+            <div class="form-group">
+                <label for="exampleInputNombre">Nombre</label>
+                <input type="text" class="form-control" id="exampleInputNombre" aria-describedby="ApellidosHelp" placeholder="Nombre" [value]="usuarioSeleccionado.nombre" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputApellidos">Apellidos</label>
+                <input type="text" class="form-control" id="exampleInputApellidos" aria-describedby="ApellidosHelp" placeholder="Apellidos" [value]="usuarioSeleccionado.apellidos" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail">Email</label>
+                <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email" [value]="usuarioSeleccionado.email" />
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPass">Contraseña</label>
+                <input type="text" class="form-control" id="exampleInputPass" placeholder="Contraseña" [value]="usuarioSeleccionado.contrasena" />
+            </div>
+            <button class="btn btn-info">Guardar cambios</button>
+        </form>
+    </div>
 
-  <!-- usuarioBorrar -->
-  <div *ngIf="opcionUsuario == 'usuarioBorrar'">
-    opcionUsuario=='usuarioBorrar'
-    <div class="input-group mb-3">
-      <!-- [(ngModel)]="terminoBusqueda" -->
-      <input
-        type="text"
-        class="form-control"
-        #buscarTextoBorrarUsuario
-        placeholder="Introduce nombre a buscar"
-        aria-label="Recipient's username"
-        aria-describedby="button-addon2"
-      />
-      <div class="input-group-append">
-        <button
-          class="btn btn-outline-secondary"
-          type="button"
-          id="button-addon2"
-          (click)="getUsuarioPorNombre(buscarTextoBorrarUsuario.value)"
-        >
+    <!-- usuarioBorrar -->
+    <div *ngIf="opcionUsuario == 'usuarioBorrar'">
+        opcionUsuario=='usuarioBorrar'
+        <div class="input-group mb-3">
+            <!-- [(ngModel)]="terminoBusqueda" -->
+            <input type="text" class="form-control" #buscarTextoBorrarUsuario placeholder="Introduce nombre a buscar" aria-label="Recipient's username" aria-describedby="button-addon2" />
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="getUsuarioPorNombre(buscarTextoBorrarUsuario.value)">
           Buscar
         </button>
-      </div>
+            </div>
+        </div>
+        <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+            <div class="card-header">{{ item.nombre }}</div>
+            <div class="card-body">
+                <h5 class="card-title">Secondary card title</h5>
+                <p class="card-text">
+                    Some quick example text to build on the card title and make up the bulk of the card's content.
+                </p>
+            </div>
+        </div>
     </div>
-    <div
-      *ngFor="let item of usuariosFiltrados"
-      class="card text-white bg-secondary mb-3"
-      style="max-width: 18rem;"
-    >
-      <div class="card-header">{{ item.nombre }}</div>
-      <div class="card-body">
-        <h5 class="card-title">Secondary card title</h5>
-        <p class="card-text">
-          Some quick example text to build on the card title and make up the
-          bulk of the card's content.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
