--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,19 +1,18 @@
 <div class="text-center">
 
-    <form class="form-signin" (ngSubmit)="onSubmit()" [formGroup]="loginForm">
+    <form class="form-signin">
         <!-- <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> -->
-        <h1 class="h3 mb-3 font-weight-normal">Inicio</h1>
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" #email id="inputEmail" class="form-control" placeholder="Email" [formControl]="emailControl">
+        <input type="email" #email id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" #contrasena id="inputPassword" class="form-control" placeholder="Contraseña" [formControl]="passControl">
+        <input type="password" #contrasena id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox mb-3">
             <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Aceptar</button>
-        <!-- <button class="btn btn-lg btn-primary btn-block" type="button" (click)="login(email.value,contrasena.value)">Sign in</button> -->
+        <button class="btn btn-lg btn-primary btn-block" type="button" (click)="login(email.value,contrasena.value)">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
 
