--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,11 @@
 <div class="text-center">
 
     <form class="form-signin">
-        <!-- <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"> -->
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" #email id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" #contrasena id="inputPassword" class="form-control" placeholder="Password" required>
+        <h1 class="h3 mb-3 font-weight-normal">¡Bienvenid@!</h1>
+        <label for="inputEmail" class="sr-only">Email</label>
+        <input type="email" #email id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+        <label for="inputPassword" class="sr-only">Contraseña</label>
+        <input type="password" #contrasena id="inputPassword" class="form-control" placeholder="Contraseña" required>
         <div class="checkbox mb-3">
             <label>
         <input type="checkbox" value="remember-me"> Remember me
