--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,10 +8,10 @@
         <input type="password" #contrasena id="inputPassword" class="form-control" placeholder="Contraseña" required>
         <div class="checkbox mb-3">
             <label>
-        <input type="checkbox" value="remember-me"> Remember me
+        <!-- <input type="checkbox" value="remember-me"> Remember me -->
       </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="button" (click)="login(email.value,contrasena.value)">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="button" (click)="login(email.value,contrasena.value)">Acceder</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
 
