--- a/src/app/admin/usuario/usuario.component.html
+++ b/src/app/admin/usuario/usuario.component.html
@@ -12,10 +12,10 @@
     <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3">
         <div class="card-header">{{ item.nombre }}</div>
         <div class="card-body">
-            <h5 class="card-title">Secondary card title</h5>
-            <p class="card-text">
+            <!-- <h5 class="card-title">Secondary card title</h5> -->
+            <!-- <p class="card-text">
                 Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
+            </p> -->
             <button class="btn btn-primary" (click)="cargarDatosUsuario(item)">
         Ver más...
       </button>
@@ -215,10 +215,10 @@
     <div *ngFor="let item of usuariosFiltrados" class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
         <div class="card-header">{{ item.nombre }}</div>
         <div class="card-body">
-            <h5 class="card-title">Secondary card title</h5>
-            <p class="card-text">
+            <!-- <h5 class="card-title">Secondary card title</h5> -->
+            <!-- <p class="card-text">
                 Some quick example text to build on the card title and make up the bulk of the card's content.
-            </p>
+            </p> -->
         </div>
     </div>
 
